# specer

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dream2nix.toml  env.local.example  flake.nix  lock.x86_64-linux.json  pyproject.toml  shell.nix
.github/workflows/: ci.yml
src/specer/: __init__.py  cli.py  logging.py  result_parser.py  sync.py  utils.py
src/specer/commands/: __init__.py  clean.py  compile.py  install.py  run.py  setup.py  topology.py  update.py
tests/: conftest.py  test_cli.py  test_specer.py
