[project]
name = "specer"
version = "0.1.0"
description = "A CLI wrapper for SPEC CPU 2017 benchmark suite"
authors = [
    { name = "minhuw", email = "wangmh15@gmail.com" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=14.1.0",
    "loguru>=0.7.3",
    "evalsync>=0.3.1",
]

readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }
keywords = ["python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
specer = "specer.cli:cli_main"

[project.urls]
Homepage = "https://github.com/minhuw/specer"
Repository = "https://github.com/minhuw/specer"
Issues = "https://github.com/minhuw/specer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-xdist>=3.3.1",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=4.2.0",
    "bandit[toml]>=1.7.5",
    "safety>=3.6.0",
    "virtualenv>=20.33.1",
    "twine>=6.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/specer"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "ERA"]
ignore = ["E501", "B008", "C901", "SIM102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["specer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-config",
    "--strict-markers",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.bandit]
exclude_dirs = ["tests", "test"]
skips = ["B101", "B601"]
